# Sourcemods-Builder

./: Cargo.toml  README.md
.github/workflows/: release.yml
gui/: Cargo.toml  build.rs
gui/src/: app.rs  enums.rs  main.rs
gui/src/app/: processing.rs
gui/src/ui/: about_window.rs  buttons_panel.rs  ext.rs  footer.rs  map_list_panel.rs  menu_bar.rs  mod.rs  settings_panel.rs  themes.rs
src/: config.rs  lib.rs  main.rs  utils.rs
src/asset_processor/: materials.rs  mod.rs  models.rs  sounds.rs
src/parsers/: bsp.rs  mod.rs  vmf.rs
