[package]
name = "gui"
version = "1.2.0"
edition = "2024"

[[bin]]
name = "sourcemods-builder-gui"
path = "src/main.rs"       

[dependencies]
sourcemods-builder = { path="../" }

eframe = "0.31.1" 
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui31"] }
rfd = "0.15"
confy = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[build-dependencies]
winresource = "0.1.19"

# [lints.rust]
# unused = { level = "allow", priority = -1 } # For exploratory dev.